--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,11 @@
   margin-top: 5rem;
   margin-bottom: 7rem;
 }
+.sprachen{
+  background-color: white;
+  border-radius: 10px;
+  margin: 10px;
+}
 
 .skillsprojects {
   display: flex;
