--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   font-size: 3.2rem;
 }
 
-.boxdiv{
+.boxdiv {
   display: flex;
   flex-direction: row;
 }
@@ -92,6 +92,10 @@
   border-radius: 10px;
 }
 
+.strich {
+  writing-mode: vertical-rl;
+}
+
 .titel {
   align-self: center;
   color: #E2C9D1;
@@ -149,7 +153,7 @@
     font-size: 10px;
   }
 
-  .boxdiv{
+  .boxdiv {
     display: flex;
     flex-direction: column;
   }
