--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
 .boxdiv {
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 .project {
@@ -27,6 +28,15 @@
   display: flex;
   flex-direction: column;
   margin-top: 10rem;
+}
+
+.freizeit {
+  
+}
+
+.images {
+  display: flex;
+  flex-direction: row;
 }
 
 .titlesprachen {
@@ -94,6 +104,7 @@
 
 .strich {
   writing-mode: vertical-rl;
+  font-size: 4rem;
 }
 
 .titel {
@@ -102,6 +113,15 @@
   font-size: 4rem;
   margin-top: 5rem;
   margin-bottom: 7rem;
+}
+
+
+.titelaboutme {
+  align-self: center;
+  color: #E2C9D1;
+  font-size: 4rem;
+  margin-top: 5rem;
+  margin-bottom: 3rem;
 }
 
 .sprachen {
@@ -161,7 +181,7 @@
 
 
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1227px) {
   .home {
     margin-top: 6rem;
   }
@@ -169,6 +189,11 @@
   .bild {
     width: 1px;
     height: 1px;
+  }
+
+  .boxdiv {
+    display: flex;
+    flex-direction: column;
   }
 
   .titel {
