--- a/src/App.css
+++ b/src/App.css
@@ -263,6 +263,16 @@
     display: flex;
     flex-direction: column;
   }
+
+  .linkedin{
+    font-size: 3rem;
+  }
+  .email{
+    font-size: 3rem;
+  }
+  .bewerbung{
+    font-size: 3rem;
+  }
 }
 
 
