--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 
 .boxdiv {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
 }
 
@@ -117,8 +117,7 @@
 }
 
 .strich {
-  writing-mode: vertical-rl;
-  font-size: 4rem;
+  font-size: 2rem;
 }
 
 .titel {
@@ -154,6 +153,12 @@
 }
 
 .hobbynamehh {
+  background-color: #EEDEE3;
+  color: white;
+  padding: 7px;
+  border-radius: 20px;
+  font-size: 1.5rem;
+  font-style: bold;
   margin-right: 4rem;
   margin-left: 4rem;
 }
@@ -177,6 +182,12 @@
   border-radius: 10px;
   margin: 10px;
   font-size: 1.3rem;
+}
+
+.sprachen:hover{
+  color:white;
+  background-color: rgba(23, 170, 255, 0.575);
+  border-radius: 15px;
 }
 
 .skillsprojects {
@@ -294,6 +305,9 @@
     margin-right: 5px;
     margin-left: 10px;
   }
+  .hobbyname{
+    font-size: 1rem;
+  }
 }
 
 @media screen and (max-width: 650px) {
@@ -302,17 +316,24 @@
     margin-right: 2rem;
     margin-left: 2rem;
   }
+  .hobbyname{
+    font-size: 0.7rem;
+  }
 }
 
 @media screen and (max-width: 800px) {
-  .hobbyname {
+  .hobbynamehh {
+    font-size: 1.8rem;
     margin-right: 10px;
     margin-left: 5px;
+  }
+  .hobbyname{
+    font-size: 1.8rem;
   }
 }
 
 @media screen and (max-width: 1227px) {
-  .hobbyname {
+  .hobbynamehh{
     margin-right: px;
     margin-left: 10px;
   }
