--- a/src/App.css
+++ b/src/App.css
@@ -191,7 +191,7 @@
   background-color: white;
   border-radius: 10px;
   margin: 10px;
-  padding: 2px;
+  padding-left: 5px;
   font-size: 1.3rem;
 }
 
@@ -223,7 +223,7 @@
 }
 
 .boxsprachen {
-  border: 3px solid rgb(226, 242, 255);
+  border: 5px solid rgb(226, 242, 255);
   border-radius: 20px;
   margin-right: 3rem;
 }
