--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,7 @@
   max-width: 100%;
   height: auto;
   align-self: center;
+  margin-top: 2rem;
 }
 
 
@@ -152,7 +153,7 @@
 .hobbynamehh {
   background-color: #EEDEE3;
   color: white;
-  padding: 5px;
+  padding: 10px;
   border-radius: 20px;
   font-size: 1.2rem;
   font-style: bold;
