--- a/src/App.css
+++ b/src/App.css
@@ -309,8 +309,13 @@
 
   .hobbyname {
     font-size: 1rem;
+  } 
+      
+  .titelSP {
+    font-size: 2rem;
   }
 }
+
 
 @media screen and (max-width: 650px) {
   .hobbynamehh {
@@ -322,6 +327,8 @@
   .hobbyname {
     font-size: 0.7rem;
   }
+
+
 }
 
 @media screen and (max-width: 800px) {
@@ -334,6 +341,8 @@
   .hobbyname {
     font-size: 1.8rem;
   }
+
+
 }
 
 @media screen and (max-width: 1227px) {
@@ -347,9 +356,8 @@
   }
 
   .titelSP {
-    font-size: 2rem;
+    font-size: 4rem;
   }
-
 
   .mntitle {
     margin-top: 4rem;
@@ -357,6 +365,10 @@
 
   .boxeinsdiv {
     margin-bottom: 3rem;
+  }
+
+  .titel{
+    font-size: 6rem;
   }
 
   .strich {
