--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   font-family: 'Cinzel Decorative', cursive;
   font-size: 6rem;
-  color: #ca99a9;
+  color: #df8399;
 }
 
 .link {
@@ -93,7 +93,7 @@
 
 .jahr {
   flex: none;
-  color: #E2C9D1;
+  color: #df8399;
   background-color: white;
   font-size: 1.2rem;
   border-radius: 300px;
@@ -101,18 +101,19 @@
 
 .schule {
   font-size: 1.8rem;
-  color: #E2C9D1;
+  color: #df8399;
   background-color: white;
   border-radius: 10px;
 }
 
 .strich {
   font-size: 2rem;
+  color: #df8399;
 }
 
 .titel {
   align-self: center;
-  color: #E2C9D1;
+  color: #df8399;
   font-size: 4rem;
   margin-top: 5rem;
   margin-bottom: 7rem;
