--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@
 
 .titlesprachen {
   font-size: 2rem;
-  color: #028bd4;
+  color: #028ad4b8;
   margin-bottom: 1px;
   margin-top: 1px;
   font-weight: 900;
@@ -52,7 +52,7 @@
 
 .titlesprachenn {
   font-size: 2rem;
-  color: #028bd4;
+  color: #028ad4b8;
   margin-bottom: 1px;
   margin-top: 1px;
   font-weight: 900;
@@ -123,7 +123,7 @@
 
 .titelgit {
   align-self: center;
-  color: #E2C9D1;
+  color: rgb(250, 154, 170);
   font-size: 4.5rem;
   margin-top: 10rem;
   margin-bottom: none;
@@ -145,8 +145,8 @@
 }
 
 .hobbyname {
-  background-color: #e491a4;
-  color: white;
+  border: 2px solid #df8399;
+  color: #df8399;
   padding: 7px;
   border-radius: 20px;
   font-size: 1.3rem;
@@ -155,8 +155,8 @@
 }
 
 .hobbynamehh {
-  background-color: #e491a4;
-  color: white;
+  border: 2px solid #df8399;
+  color: #df8399;
   padding: 8px;
   border-radius: 20px;
   font-size: 1.2rem;
@@ -202,7 +202,7 @@
 
 .titelSP {
   align-self: center;
-  color: #028bd4;
+  color: #028ad4b8;
   font-size: 4.5rem;
   margin-top: 1rem;
   margin-bottom: 7rem;
@@ -222,7 +222,7 @@
 }
 
 .linkedin {
-  font-size: 8rem;
+  font-size: 7rem;
   margin-right: 6rem;
   color: pink;
   text-decoration: none;
@@ -243,7 +243,7 @@
 }
 
 .email {
-  font-size: 9rem;
+  font-size: 8rem;
   margin-right: 6rem;
   color: pink;
   text-decoration: none;
@@ -257,7 +257,7 @@
 
 .bewerbung {
   color: pink;
-  font-size: 8rem;
+  font-size: 7rem;
   text-decoration: none;
 
 }
