--- a/src/App.css
+++ b/src/App.css
@@ -234,6 +234,12 @@
   text-decoration: none;
 
 }
+.boxx{
+  border: 2px solid #df8399;
+  border-radius: 20px;
+  padding: 6px;
+  min-width: 22rem;
+}
 
 .socials {
   display: flex;
@@ -273,6 +279,7 @@
   flex-direction: column;
   align-items: center;
 }
+
 
 @media screen and (max-width: 420px) {
   .bild {
