--- a/src/App.css
+++ b/src/App.css
@@ -234,7 +234,8 @@
   text-decoration: none;
 
 }
-.boxx{
+
+.boxx {
   border: 2px solid #df8399;
   border-radius: 20px;
   padding: 6px;
@@ -282,9 +283,14 @@
 
 
 @media screen and (max-width: 420px) {
-  .boxx{
+  .boxx {
     min-width: 5rem
   }
+
+  .titelSP {
+    font-size: 4px;
+  }
+
   .bild {
     width: 1px;
     height: 1px;
@@ -315,66 +321,57 @@
     font-size: 3rem;
   }
 
-  .hobbynamehh {
-    font-size: 1rem;
-    margin-right: 5px;
-    margin-left: 5px;
-  }
-
-  .hobbyname {
-    font-size: 1rem;
-  }
-
-  .titelSP {
-    font-size: 1rem;
-  }
 }
 
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 935px) {
   .hobbynamehh {
-    font-size: 0.7rem;
-    margin-right: 2rem;
-    margin-left: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    margin-left: 0;
+    margin-right: 0;
+
   }
 
   .hobbyname {
-    font-size: 0.7rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
   }
 
-
-}
-
-@media screen and (max-width: 800px) {
-  .hobbynamehh {
-    font-size: 1.8rem;
-    margin-right: 5px;
-    margin-left: 5px;
+  .bildone {
+    max-width: 90%;
+    height: auto;
+    align-self: center;
+    margin-top: 3rem;
+    margin-left: 12px;
   }
 
-  .hobbyname {
-    font-size: 1.8rem;
+  .hobbys {
+    flex-direction: column;
   }
 
+  .bild {
+    margin-top: 12rem;
+    margin-bottom: 5px;
+  }
 
-}
-
-@media screen and (max-width: 1227px) {
-  .hobbynamehh {
-    margin-right: 10px;
-    margin-left: 10px;
+  .boxx {
+    min-width: 200px;
+    max-width: 5px;
   }
 
   .home {
     margin-top: 6rem;
   }
 
-  .titelSP {
-    font-size: 4rem;
+  .schule {
+    word-wrap: break-word;
+    font-size: 1.8rem;
+    padding: 0px;
   }
 
   .mntitle {
-    margin-top: 4rem;
+    margin-top: 7rem;
   }
 
   .boxeinsdiv {
@@ -399,10 +396,6 @@
     margin-right: 1rem;
   }
 
-  .bild {
-    width: 1px;
-    height: 1px;
-  }
 
   .boxdiv {
     display: flex;
@@ -411,7 +404,9 @@
 
   .titel {
     font-size: 3rem;
+    margin-top: 1rem;
   }
+
 
   .home {
     flex-direction: column;
@@ -420,11 +415,6 @@
 
   .mntitle {
     font-size: 4rem;
-  }
-
-  .portfolio {
-    font-size: 10px;
-    align-self: center;
   }
 
   .boxes {
@@ -436,27 +426,5 @@
     align-self: center;
     margin-right: 0px;
     margin-bottom: 3rem;
-  }
-}
-
-@media screen and (max-width: 320px) {
-  .bild {
-    width: 1px;
-    height: 1px;
-  }
-  .boxx{
-    min-width: 30%;
-  }
-
-  .mntitle {
-    margin-left: none;
-    font-size: 1rem;
-    align-self: center;
-  }
-
-  .portfolio {
-    margin-left: 0px;
-    font-size: 10px;
-    align-self: center;
   }
 }
